# Palyra

./: .editorconfig  .gitignore  .gitleaks.toml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  justfile  npm-audit-dev-allowlist.json  osv-scanner.toml  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: ambient.rs  commands.rs  companion.rs  companion_console.rs  console_cache.rs  dashboard_open.rs  desktop_state.rs  lib.rs  onboarding.rs  openai_auth.rs  snapshot.rs  supervisor.rs  tests.rs
crates/palyra-auth/: Cargo.toml
crates/palyra-auth/src/: constants.rs  lib.rs  models.rs  registry.rs  storage.rs  tests.rs
crates/palyra-browserd/: Cargo.toml  build.rs
crates/palyra-browserd/src/: lib.rs  main.rs
crates/palyra-browserd/src/app/: config.rs  mod.rs
crates/palyra-browserd/src/domain/: actions.rs  downloads.rs  mod.rs  session.rs
crates/palyra-browserd/src/engine/: chromium.rs
crates/palyra-browserd/src/persistence/: mod.rs  session_state.rs  state_store.rs
crates/palyra-browserd/src/security/: target_validation.rs
crates/palyra-browserd/src/support/: mod.rs  tests.rs
crates/palyra-cli/: Cargo.toml  build.rs
crates/palyra-cli/data/docs/: README.md  cli-mcp-interop-playbook.md  cli-v1-acp-shim.md  release-validation-checklist.md
crates/palyra-cli/examples/: emit_cli_install_smoke_inventory.rs  render_cli_parity_report.rs  run_release_eval_gate.rs  run_workflow_regression.rs
crates/palyra-cli/src/: acp_bridge.rs  cli.rs  cli_parity.rs  lib.rs  main.rs  shared_chat_commands.rs  workflow_regression.rs
crates/palyra-cli/src/acp_bridge/: tests.rs
crates/palyra-cli/src/app/: mod.rs
crates/palyra-cli/src/args/: agent.rs  approvals.rs  auth.rs  browser.rs  configure.rs  daemon.rs  deployment.rs  devices.rs  mcp.rs  memory.rs  message.rs  mod.rs  models.rs  node.rs  nodes.rs  objectives.rs  onboarding.rs  pairing.rs  plugins.rs  profile.rs  protocol.rs  routines.rs  secrets.rs  sessions.rs  system.rs  tests.rs
crates/palyra-cli/src/client/: channels.rs  control_plane.rs  grpc.rs  message.rs  operator.rs  runtime.rs
crates/palyra-cli/src/commands/: acp.rs  agent.rs  agents.rs  approvals.rs  auth.rs  backup.rs  browser.rs  config.rs  configure.rs  cron.rs  daemon.rs  deployment.rs  devices.rs  docs.rs  doctor.rs  health.rs  hooks.rs  init.rs  logs.rs  mcp.rs  memory.rs  message.rs  mod.rs  models.rs  node.rs  nodes.rs  objectives.rs  onboarding.rs  operator_wizard.rs  pairing.rs  plugins.rs  policy.rs  profile.rs  protocol.rs  routines.rs  secrets.rs  secrets_text.rs  (+11 more)
crates/palyra-cli/tests/: cli_parity.rs  cli_parity_matrix.toml  cli_parity_report.md  cli_v1_acp_shim.rs  config_mutation.rs  config_validate.rs  daemon_journal_maintenance.rs  daemon_status.rs  dashboard_cli.rs  doctor_cli.rs  help_snapshots.rs  installed_smoke.rs  logs_cli.rs  models_cli.rs  output_format_cli.rs  pairing_flow.rs  policy_explain.rs  protocol_contract.rs  secrets_cli.rs  shared_chat_command_parity.md  skills_lifecycle.rs  version_cli.rs  wizard_cli.rs  workflow_regression_contract.rs  workflow_regression_matrix.rs
crates/palyra-common/: Cargo.toml  build.rs
crates/palyra-common/src/: config_system.rs  daemon_config_schema.rs  deployment_profiles.rs  feature_rollouts.rs  lib.rs  netguard.rs  project_context.rs  redaction.rs  runtime_contracts.rs  runtime_preview.rs  secret_refs.rs  windows_security.rs  workspace_patch.rs
crates/palyra-common/tests/: protocol_schema_contract.rs  release_eval_contract.rs
crates/palyra-connectors/: Cargo.toml
crates/palyra-connectors/src/: lib.rs  net.rs  protocol.rs  storage.rs  supervisor.rs
crates/palyra-connectors/tests/: simulator_harness.rs
crates/palyra-control-plane/: Cargo.toml
crates/palyra-control-plane/src/: client.rs  lib.rs  models.rs  tests.rs
crates/palyra-daemon/: Cargo.toml  build.rs
crates/palyra-daemon/src/: access_control.rs  agents.rs  auxiliary_executor.rs  background_queue.rs  channel_router.rs  channels.rs  command_router.rs  config.rs  cron.rs  delegation.rs  execution_backends.rs  flows.rs  gateway.rs  hooks.rs  journal.rs  lib.rs  main.rs  maintenance.rs  media.rs  media_derived.rs  model_provider.rs  node_rpc.rs  node_runtime.rs  objectives.rs  observability.rs  openai_auth.rs  openai_surface.rs  orchestrator.rs  plugins.rs  provider_leases.rs  quic_runtime.rs  realtime.rs  retrieval.rs  routines.rs  runtime_preview_controls.rs  sandbox_runner.rs  tool_posture.rs  tool_protocol.rs  usage_governance.rs  wasm_plugin_runner.rs  (+1 more)
crates/palyra-daemon/tests/: admin_surface.rs  current_state_inventory.rs  gateway_grpc.rs  health_endpoint.rs  node_rpc_mtls.rs  openai_auth_surface.rs
crates/palyra-egress-proxy/: Cargo.toml
crates/palyra-egress-proxy/tests/: critical_attack_scenarios.rs
crates/palyra-identity/: Cargo.toml
crates/palyra-identity/benches/: pairing_handshake.rs
crates/palyra-identity/src/: ca.rs  device.rs  error.rs  lib.rs  mtls.rs  pairing.rs  store.rs
crates/palyra-identity/tests/: mtls_pairing_flow.rs
crates/palyra-policy/: Cargo.toml
crates/palyra-policy/benches/: evaluate_policy.rs
crates/palyra-policy/src/: lib.rs
crates/palyra-skills/: Cargo.toml  README.md
crates/palyra-skills/src/: audit.rs  constants.rs  lib.rs  manifest.rs  models.rs  tests.rs  trust.rs  verify.rs
crates/palyra-transport-quic/: Cargo.toml
crates/palyra-transport-quic/src/: lib.rs
crates/palyra-transport-quic/tests/: transport.rs
crates/palyra-vault/: Cargo.toml
crates/palyra-vault/src/: backend.rs  envelope.rs  filesystem.rs  lib.rs  metadata.rs  scope.rs  secret_resolver.rs
crates/palyra-workerd/: Cargo.toml
crates/palyra-workerd/src/: lib.rs
crates/palyra-workerd/tests/: critical_attack_scenarios.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: a2ui_json_parser.rs  auth_profile_registry_parser.rs  channel_payload_validation.rs  config_path_parser.rs  redaction_routines.rs  safety_boundary_transform.rs  webhook_payload_parser.rs  webhook_replay_verifier.rs
(+642 files in other folders)
