[workspace]
members = [
  "crates/palyra-common",
  "crates/palyra-daemon",
  "crates/palyra-cli",
  "crates/palyra-browserd",
  "crates/palyra-policy",
  "crates/palyra-a2ui",
  "crates/palyra-plugins/runtime",
  "crates/palyra-plugins/sdk",
  "crates/palyra-identity",
  "crates/palyra-vault",
  "crates/palyra-skills",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.90"

[workspace.dependencies]
agent-client-protocol = { version = "0.9.4", features = ["unstable_session_list"] }
anyhow = "1.0.96"
async-trait = "0.1.89"
axum = "0.8.1"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.31"
chrono = "0.4.40"
criterion = "0.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
ring = "0.17.14"
proptest = "1.6.0"
libc = "0.2.171"
protoc-bin-vendored = "3.0.0"
prost = "0.13.5"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "native-tls"] }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["logging", "ring", "tls12"] }
tonic = { version = "0.12.3", features = ["transport", "tls"] }
tonic-build = "0.12.3"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ulid = "1.2.0"
wasmtime = { version = "41.0.3", default-features = false, features = ["cranelift", "runtime", "wat"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
