[workspace]
members = [
  "crates/palyra-common",
  "crates/palyra-control-plane",
  "crates/palyra-connectors",
  "crates/palyra-auth",
  "crates/palyra-daemon",
  "crates/palyra-transport-quic",
  "crates/palyra-sandbox",
  "crates/palyra-cli",
  "crates/palyra-browserd",
  "crates/palyra-policy",
  "crates/palyra-a2ui",
  "crates/palyra-plugins/runtime",
  "crates/palyra-plugins/sdk",
  "crates/palyra-identity",
  "crates/palyra-vault",
  "crates/palyra-skills",
]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "LICENSE"
version = "0.1.0"
rust-version = "1.91"

[workspace.dependencies]
agent-client-protocol = { version = "0.10.0", features = ["unstable_session_list"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.1"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
chrono = "0.4.44"
criterion = "0.8.2"
crossterm = "0.29.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.31"
flate2 = "1.1.5"
getrandom = "0.4.1"
headless_chrome = "1.0.21"
hex = "0.4.3"
hkdf = "0.13.0"
lopdf = "0.35.0"
quick-xml = "0.38.3"
ring = "0.17.14"
proptest = "1.11.0"
libc = "0.2.184"
protoc-bin-vendored = "3.0.0"
prost = "0.14.3"
rand = "0.10.1"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "form", "json", "native-tls", "query"] }
rpassword = "7.3.1"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rustls = { version = "0.23.37", default-features = false, features = ["logging", "ring", "std", "tls12"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.11"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["logging", "ring", "tls12"] }
tonic = { version = "0.14.5", features = ["transport", "tls-ring"] }
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-prost = "0.14.5"
toml = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
ulid = "1.2.0"
wasmtime = { version = "43.0.1", default-features = false, features = ["cranelift", "runtime", "wat"] }
webbrowser = "1.0.6"
windows-sys = "0.61.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
