[package]
name = "palyra-browserd"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[[bin]]
name = "palyra-browserd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
headless_chrome.workspace = true
libc.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
prost.workspace = true
reqwest.workspace = true
ring.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
