[package]
name = "palyra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "palyra"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
palyra-policy = { version = "0.1.0", path = "../palyra-policy" }
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
toml.workspace = true
ulid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
