[package]
name = "palyra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "palyra"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
palyra-policy = { version = "0.1.0", path = "../palyra-policy" }
palyra-skills = { version = "0.1.0", path = "../palyra-skills" }
palyra-vault = { version = "0.1.0", path = "../palyra-vault" }
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
toml.workspace = true
ulid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
