[package]
name = "palyra-common"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
