[package]
name = "palyra-connectors"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
flate2.workspace = true
futures.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-connector-discord = { version = "0.1.0", path = "../palyra-connector-discord" }
reqwest = { workspace = true, features = ["multipart"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
