[package]
name = "palyra-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "palyrad"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
palyra-policy = { version = "0.1.0", path = "../palyra-policy" }
prost.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
