[package]
name = "palyra-daemon"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[[bin]]
name = "palyrad"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
chrono.workspace = true
palyra-auth = { version = "0.1.0", path = "../palyra-auth" }
palyra-a2ui = { version = "0.1.0", path = "../palyra-a2ui" }
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
palyra-policy = { version = "0.1.0", path = "../palyra-policy" }
palyra-plugins-runtime = { version = "0.1.0", path = "../palyra-plugins/runtime" }
palyra-plugins-sdk = { version = "0.1.0", path = "../palyra-plugins/sdk" }
palyra-sandbox = { version = "0.1.0", path = "../palyra-sandbox" }
palyra-skills = { version = "0.1.0", path = "../palyra-skills" }
palyra-transport-quic = { version = "0.1.0", path = "../palyra-transport-quic" }
palyra-vault = { version = "0.1.0", path = "../palyra-vault" }
prost.workspace = true
libc.workspace = true
quinn.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
