[package]
name = "palyra-egress-proxy"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
palyra-common = { version = "0.1.0", path = "../palyra-common" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
