[package]
name = "palyra-identity"
edition.workspace = true
license-file.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hkdf.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
ulid.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
x509-parser = "0.18.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.171"

[[bench]]
name = "pairing_handshake"
harness = false
