[package]
name = "palyra-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-plugins-runtime = { version = "0.1.0", path = "../palyra-plugins/runtime" }
palyra-policy = { version = "0.1.0", path = "../palyra-policy" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true