[package]
name = "palyra-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tracing.workspace = true

[dev-dependencies]
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
rcgen.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
