[package]
name = "palyra-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hkdf.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
palyra-identity = { version = "0.1.0", path = "../palyra-identity" }
rand.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
