[package]
name = "palyra-desktop-control-center"
version = "0.1.0"
edition = "2021"
license-file = "../../../LICENSE"
publish = false

[workspace]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.102"
palyra-common = { path = "../../../crates/palyra-common" }
palyra-control-plane = { path = "../../../crates/palyra-control-plane" }
palyra-vault = { path = "../../../crates/palyra-vault" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "cookies", "native-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "1.0.3"
ulid = "1.2.0"
webbrowser = "1.0.6"

[target.'cfg(target_os = "linux")'.dev-dependencies]
glib = "0.18.5"

[patch.crates-io]
glib = { path = "third_party/glib-0.18.5-patched" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
